force-app/main/default/objects/Client_Progress__c/Client_Progress__c.object-meta.xml
<CustomObject>
    <label>Client Progress</label>
    <nameField>
        <displayFormat>Progress ID - {0000}</displayFormat>
        <label>Client Progress ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>