force-app/main/default/objects/Client_Progress__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge</label>
    <referenceTo>Challenge__c</referenceTo>
    <relationshipLabel>Client Progresses</relationshipLabel>
    <relationshipName>Client_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>