force-app/main/default/objects/Client_Progress__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Progresses</relationshipLabel>
    <relationshipName>Client_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>