force-app/main/default/objects/Client_Progress__c/fields/Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned__c</fullName>
    <label>Points Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>