force-app/main/default/objects/Client_Progress__c/fields/Progress_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update_Date__c</fullName>
    <label>Progress Update Date</label>
    <type>Date</type>
</CustomField>